@@ -1,0 +1,2 @@
+
+alter table INFORMATION_VOTE alter column vote drop not null;
