@@ -1,0 +1,5 @@
+package com.agh.hydra.wiki.model;
+
+public enum Vote {
+    UP, DOWN
+}
