@@ -2,7 +2,7 @@ package com.agh.hydra.wiki.dao;
 
 import com.agh.hydra.wiki.entity.RecruitmentInfoEntity;
 import org.apache.ibatis.annotations.Mapper;
-import org.springframework.data.repository.query.Param;
+import org.apache.ibatis.annotations.Param;
 
 import java.util.List;
 
@@ -11,5 +11,9 @@ public interface WikiRepository {
     
     void createInformation(RecruitmentInfoEntity entity);
 
-    void invalidateInformation(@Param("informationIds") List<Long> list);
+    void invalidateInformation(@Param("informationIds") List<Long> informationIds);
+
+    void updateInformationVote(@Param("userId") String userId,
+                               @Param("informationId") Long informationId,
+                               @Param("vote") String vote);
 }
